Name:                html2hamlet
Version:             0.1.0
Synopsis:            HTML to Hamlet converter

Description:         HTML to Hamlet converter

License:             BSD3
License-file:        LICENSE
Homepage:            http://github.com/tanakh/html2hamlet
Author:              Hideyuki Tanaka
Maintainer:          tanaka.hideyuki@gmail.com
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.6

Source-repository head
  Type: git
  Location: https://tanakh@github.com/tanakh/html2hamlet.git

Executable html2hamlet
  Main-is:             Html2Hamlet.hs
  
  Build-depends:       base >= 4 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , text >= 0.11 && < 0.12
                     , blaze-builder >= 0.3 && < 0.4
                     , hamlet >= 1.1 && < 1.2
                     , http-conduit >= 1.9 && < 2.0
                     , xmlhtml >= 0.2 && < 0.3
                     , cmdargs >= 0.10 && < 0.11
                     , network >= 2.4 && < 2.5

